<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Top-left: Wave indicator -->
    <TextView
        android:id="@+id/hud_wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/hud_wave_label"
        android:textColor="@color/doom_green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3" />

    <!-- Top-center: FPS indicator -->
    <TextView
        android:id="@+id/hud_fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="FPS: 60"
        android:textColor="@color/doom_yellow"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3" />

    <!-- Top-right: Score -->
    <TextView
        android:id="@+id/hud_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/hud_score_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3" />

    <!-- Center: Message overlay (wave announcements) -->
    <TextView
        android:id="@+id/hud_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:textColor="@color/doom_red"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5" />

    <!-- Center: Crosshair -->
    <View
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:layout_centerInParent="true"
        android:background="@color/doom_red"
        android:alpha="0.7" />

    <!-- Bottom-left: Health -->
    <TextView
        android:id="@+id/hud_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/hud_health_label"
        android:textColor="@color/doom_red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3" />

    <!-- Bottom-center: Current weapon -->
    <TextView
        android:id="@+id/hud_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="PISTOL"
        android:textColor="@color/doom_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3" />

    <!-- Bottom-right: Ammo -->
    <TextView
        android:id="@+id/hud_ammo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/hud_ammo_label"
        android:textColor="@color/doom_yellow"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3" />

</RelativeLayout>
